<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <TextView
            android:text="@string/pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPedidoLay"
            android:layout_weight="0.79"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />

        <TextView
            android:text="@string/pedido_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPedidoNumLay"
            android:layout_weight="4.86" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:text="@string/pedido_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStatusPedidoLay"
            android:layout_weight="1" />

        <TextView
            android:text="@string/pedido_status_din"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStatusPedidoDin"
            android:layout_weight="4.77" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/endereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLayEndereco"
            android:layout_weight="0.21" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEnderecoDin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/valor_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorTotalLay"
            android:layout_weight="0.14" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorTotalDin"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/valor_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorPagoLay"
            android:layout_weight="0.17" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorPagoDin"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:text="@string/produtos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewProdutosLay" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/textViewProdutosDin"
        android:layout_height="120dp" />

    <Button
        android:text="@string/btn_rota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRota" />

</LinearLayout>
