<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_descricao_pedido_acitivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.teste.xofome.xofomeadmin.activities.DescricaoPedidoAcitivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbarDesc" />

    <TextView
        android:text="@string/text_view_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDescTitle"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerViewDescPedido"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:text="@string/text_view_desc_valor_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorTPedido"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorRealPedido"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:text="@string/text_view_desc_valor_a_ser_pago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorSerPagoPedido"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewValorASerPagoRealPedido"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:text="@string/text_view_desc_entrega"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:id="@+id/textViewDescEntrega"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDescEndereco"
            android:layout_weight="3.69"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:text="@string/text_view_desc_status_do_pedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewStatusPedidoDesc"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextStatusPedidoDesc"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
